<resources>
    <string name="app_name">Uirsos</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="check">Check</string>
    <string name="regitrasi">Registrasi</string>
    <string name="masuk">MASUK</string>
    <string name="npm_1235xxxxx">NPM (1235xxxxx)</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confrim_password">Confrim Password</string>
    <string name="no_hp_0812xxxxxxxx">No.Hp (812xxxxxxxx)</string>
    <string name="kode_verifikasi">Kode Verifikasi</string>
    <string name="_62">+62</string>
    <string name="noHP">No Handphone</string>
    <string name="daftarEmail">Email</string>
    <string name="account_setting">Account Setting</string>
    <string name="logout">Logout</string>
    <string name="masukan_data_profile">Masukan Data Profile</string>
    <string name="simpan">Simpan</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>

    <string name="status">STATUS</string>
    <string name="pikirkan">Apa yang anda pikirkan</string>
    <string name="info">BERITA KAMPUS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="komentar">Komentar</string>
    <string name="fakultas">Fakultas</string>
    <string name="no_Connection">Tidak ada jaringan</string>
    <string name="koneksi_gagal">No Connection To Server</string>
    <string name="verifikasi_akun">Verifikasi Akun</string>
    <string name="descript">Dengan mengirimkan photo KTM dan NPM anda mengajukan untuk terdaftar sebagai mahasiswa</string>
    <string name="todo">TODO</string>
    <string name="title_activity_password">password</string>
    <string name="Chat">Chat</string>
    <string name="login_with_email_student">login student</string>
    <string name="textsaling">Saling berbagi informasi seputar kampus dengan teman!</string>
    <string name="selamatDatang">Selamat datang di UIRSOS!</string>
    <string name="universitas_islam_riau">Universitas Islam Riau</string>
    <string name="menggunakan_akun_student">Menggunakan Akun Student</string>
    <string name="nama_belakang">Nama Belakang</string>
    <string name="nama_depan">Nama Depan</string>
    <string name="masukan_nama_anda">Masukan Nama Anda</string>
    <string name="note">Data harus sama dengan yang ada di KTM anda! Jika tidak Anda diwajibkan menginputkan Identitas KTM ini kembali!</string>
    <string name="studentmail">\@student.uir.ac.id</string>
    <string name="infovalidasi">Maaf akun anda di Non-Aktifkan! Karena data yang anda kirimkan tidak sesuai dengan yang ada di KTM!</string>
    <string name="imagedekan">Gambar Berita dari Dekan</string>

    <string-array name="fakultas">
        <item>1.Fakultas Hukum</item>
        <item>2.Fakultas Agama Islam</item>
        <item>3.Fakultas Teknik</item>
        <item>4.Fakultas Pertanian</item>
        <item>5.Fakultas Ekonomi</item>
        <item>6.Fakultas Ilmu Keguruan dan Pendidikan</item>
        <item>7.Fakultas Ilmu Sosial dan Politik</item>
        <item>8.Fakultas Psikologi</item>
        <item>9.Fakultas Ilmu Komunikasi</item>
    </string-array>

    <string-array name="hukum">
        <item>1.Ilmu Hukum</item>
    </string-array>

    <string-array name="agamaislam">
        <item>1.Pendidikan Agama Islam</item>
        <item>2.Ekonomi Islam (Syariah)</item>
        <item>3.Pendidikan Islam Anak Usia dini (PIAUD)</item>
        <item>4.Perbankan Syariah</item>
        <item>5.Pendidikan Bahasa Arab</item>
    </string-array>

    <string-array name="teknik">
        <item>1.Teknik Sipil</item>
        <item>2.Teknik Perminyakan</item>
        <item>3.Teknik Mesin</item>
        <item>4.Planologi</item>
        <item>5.Teknik Informatika</item>
        <item>6.Teknik Geologi</item>
    </string-array>

    <string-array name="pertanian">
        <item>1.Agroteknologi</item>
    </string-array>

    <string-array name="ekonomi">
        <item>1.Ekonomi Pembangunan</item>
        <item>2.Manajemen</item>
        <item>3.Akuntansi</item>
    </string-array>

    <string-array name="fkip">
        <item>1.Pendidikan Bahasa Inggris</item>
        <item>2.Pendidikan Bahasa Indonesia</item>
        <item>3.Pendidikan Matematika</item>
        <item>4.Pendidikan Biologi</item>
        <item>5.Pendidikan Jaskerek</item>
        <item>6.Pendidikan Sendratasik</item>
        <item>7.Pendidikan Akuntansi</item>
        <item>8.PGSD</item>
        <item>9.Pendidikan Kimia</item>
    </string-array>

    <string-array name="isp">
        <item>1.Ilmu Pemerintahan</item>
        <item>2.Kriminologi</item>
        <item>3.Administrasi Publik</item>
        <item>4.Administrasi Bisnis</item>
        <item>5.Administrasi Perkantoran</item>
        <item>6.Hubungan Internasional</item>
    </string-array>

    <string-array name="psikologi">
        <item>1.Ilmu Pemerintahan</item>
    </string-array>

    <string-array name="komunikasi">
        <item>1.Ilmu Komunikasi</item>
    </string-array>


</resources>