<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SignUp.WelcomeLogin">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/ic_logo_uir"
                    android:gravity="center"
                    android:text="@string/universitas_islam_riau"
                    android:textSize="@dimen/fab_margin"
                    tools:ignore="RtlHardcoded,SpUsage" />
            </LinearLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginTop="100dp"
        android:layout_marginRight="@dimen/fab_margin"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logoUirsos"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@mipmap/ic_logo_uirsos" />

        <TextView
            android:id="@+id/text_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selamatDatang"
            android:textColor="@color/blackgreen"
            android:textSize="12pt" />

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textsaling"
            android:textColor="@color/blackgreen"
            android:textSize="14sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginBottom="60dp"
        android:background="@drawable/round_bg"
        android:onClick="goRegis"
        android:text="@string/regitrasi" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_above="@+id/button1"
        android:background="@drawable/round_bg"
        android:onClick="goLogin"
        android:text="@string/login_with_email_student" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Versi 1.0"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/fab_margin"/>
</RelativeLayout>