<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0db900"
    tools:context="com.uirsos.www.uirsoskampus.SignUp.LoginActivity">

    <!--Bagian Header-->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/logoUirsos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="UIRSOS"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
            android:textColor="#fff"
            android:textSize="46sp" />

        <TextView
            android:id="@+id/deskripsiUirsos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Media Sosial Universitas Islam Riau"
            android:textColor="#ffee00" />
    </LinearLayout>

    <!--Bagian Body-->
    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/header"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="#fff"
            android:text="Silakan masuk dengan NPM anda yang terdaftar"
            android:textAppearance="@style/TextAppearance.AppCompat.Tooltip" />
        <!--Icon Image -->

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--NPM-->
            <LinearLayout
                android:id="@+id/line_Npm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_assignment"
                    android:tint="#fff"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/login_Npm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/npm_1235xxxxx"
                    android:inputType="number"
                    android:maxLength="9" />

            </LinearLayout>

            <!--Email-->
            <LinearLayout
                android:id="@+id/line_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_email"
                    android:tint="#fff"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/login_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </LinearLayout>

            <!--Password-->
            <LinearLayout
                android:id="@+id/line_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_lock_open"
                    android:tint="#fff"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </LinearLayout>

        </LinearLayout>
        <!--End Icon Image-->

        <Button
            android:id="@+id/btn_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/check"
            android:textAllCaps="true" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Inverse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>

    </LinearLayout>

    <!--Bagian Footer-->
    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#ffffff"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/belum_punya_akun"
                android:textAppearance="@style/Material.TextAppearance.SimpleDialog.Light" />

            <TextView
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtViewRegist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regitrasi"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
                android:textColor="@color/green"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
