<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0db900"
    tools:context="com.uirsos.www.uirsoskampus.SignUp.LoginActivity">

    <!--Bagian Header-->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/logoUirsos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="UIRSOS"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
            android:textColor="#fff"
            android:textSize="46sp" />

        <TextView
            android:id="@+id/deskripsiUirsos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Media Sosial Universitas Islam Riau"
            android:textColor="#ffee00" />
    </LinearLayout>

    <!--Bagian Body-->
    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/header"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/text_keterangan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Check NPM dulu! Pastikan NPM belum pernah digunakan"
            android:textAppearance="@style/Material.TextAppearance.SimpleDialog" />

        <!--Data-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <!--NPM-->
            <LinearLayout
                android:id="@+id/line_Npm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_assignment"
                    android:tint="#fff"
                    tools:ignore="ContentDescription" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/daftar_Npm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/npm_1235xxxxx"
                        android:inputType="number"
                        android:maxLength="9" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/info_Error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

        </LinearLayout>
        <!--End data-->

        <Button
            android:id="@+id/btn_Daftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/check"
            android:textAllCaps="true" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />

    </LinearLayout>

    <!--Bagian Footer-->
    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#ffffff"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sudah_punya_akun"
                android:textAppearance="@style/Material.TextAppearance.SimpleDialog.Light" />

            <TextView
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtViewMasuk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masuk"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
                android:textColor="@color/green"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
