<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp.RegistPertama">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="14dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_logo_uirsos" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Buat Akun Uirsos"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email" />

                    <TextView
                        android:id="@+id/edtEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:background="@drawable/round_edittext"
                        android:gravity="center"
                        android:padding="10dp"
                        android:textAllCaps="false"
                        android:textSize="16sp"
                        tools:ignore="Autofill,LabelFor" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:gravity="center">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true"
                        tools:ignore="RtlSymmetry">

                        <EditText
                            android:id="@+id/edtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/round_edittext"
                            android:ems="10"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:padding="10dp"
                            tools:ignore="Autofill" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:gravity="center">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true"
                        tools:ignore="RtlSymmetry">

                        <EditText
                            android:id="@+id/edt_coPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/round_edittext"
                            android:ems="10"
                            android:hint="@string/confrim_password"
                            android:inputType="textPassword"
                            android:padding="10dp"
                            tools:ignore="Autofill" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progressCreate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_gravity="center"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/border_bottom">

        <Button
            android:id="@+id/btnSimpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_bg"
            android:text="daftar" />
    </RelativeLayout>

</RelativeLayout>